# parallel_programming_ufrn

./: .gitignore  .gitmodules  404.html  Readme.adoc  Readme.md  build_pdf.sh  index.html  mkdocs.yml  question_1.c  requirements.txt  run_tests.sh  sitemap.xml
.github/workflows/: ci.yml
chapter_1/: Readme.md  run_tests.sh
chapter_1/Readme/: index.html
chapter_1/question_1/: question_1.c
chapter_1/question_1/Readme/: index.html
chapter_1/question_2/: question_2.py
chapter_1/question_2/Readme/: index.html
chapter_1/question_3/: node.hpp
chapter_1/question_3/Readme/: index.html
chapter_1/question_4/: Readme.md  question_4.cpp
chapter_1/question_4/Readme/: index.html
chapter_1/question_5/: Readme.md
chapter_1/question_5/Readme/: index.html
chapter_1/question_6/: Readme.md
chapter_1/question_6/Readme/: index.html
chapter_1/question_9/: Readme.md
chapter_1/question_9/Readme/: index.html
chapter_2/: Readme.md
chapter_2/Readme/: index.html
chapter_2/question_01/Readme/: index.html
chapter_2/question_02/Readme/: index.html
chapter_2/question_03/Readme/: index.html
chapter_2/question_05/Readme/: index.html
chapter_2/question_07/Readme/: index.html
chapter_2/question_1/: Readme.md  main.dart
chapter_2/question_10/: Readme.md  main.py
chapter_2/question_10/Readme/: index.html
chapter_2/question_15/: Readme.md
chapter_2/question_15/Readme/: index.html
chapter_2/question_16/: main.py  requirements.txt
chapter_2/question_16/Readme/: index.html
chapter_2/question_17/Readme/: index.html
chapter_2/question_19/: Readme.md
chapter_2/question_19/Readme/: index.html
chapter_2/question_2/: Readme.md
chapter_2/question_20/Readme/: index.html
chapter_2/question_21/: Readme.md
chapter_2/question_21/Readme/: index.html
chapter_2/question_24/: Cargo.toml  Readme.md
chapter_2/question_24/Readme/: index.html
chapter_2/question_3/: Readme.md
chapter_3/Readme/: index.html
chapter_3/question_02/Readme/: index.html
chapter_3/question_04/: questio_4
chapter_3/question_04/Readme/: index.html
chapter_3/question_06/: questao_6  questao_6.c
chapter_3/question_06/Readme/: index.html
chapter_3/question_09/Readme/: index.html
chapter_3/question_11/: question_11_mpi.c  question_11_scan.c  question_11_serial.cpp
chapter_3/question_11/Readme/: index.html
chapter_3/question_12/: plot_data.r  ring_pass_prefix_sums.c  run_bench.sh
chapter_3/question_12/Readme/: index.html
chapter_3/question_13/Readme/: index.html
chapter_3/question_16/: allgather.drawio
chapter_3/question_16/Readme/: index.html
chapter_3/question_17/: question_17.c
chapter_3/question_17/Readme/: index.html
chapter_3/question_19/: question_19.c
chapter_3/question_19/Readme/: index.html
chapter_5/: Readme.md
docs/: index.md
docs/chapter_1/: Readme.md
docs/chapter_1/question_1/: Readme.md
docs/chapter_1/question_2/: Readme.md  question_2.py
docs/chapter_1/question_3/: Readme.md
docs/chapter_1/question_4/: Readme.md
docs/chapter_1/question_5/: Readme.md
docs/chapter_1/question_6/: Readme.md
docs/chapter_1/question_9/: Readme.md
docs/chapter_2/: Readme.md
docs/chapter_2/question_01/: Readme.md  main.dart
docs/chapter_2/question_02/: Readme.md
docs/chapter_2/question_03/: Readme.md
docs/chapter_2/question_05/: Readme.md
docs/chapter_2/question_1/: Readme.md
docs/chapter_2/question_10/: Readme.md
docs/chapter_2/question_15/: Readme.md
docs/chapter_2/question_16/: Readme.md  requirements.txt
docs/chapter_2/question_17/: Readme.md
docs/chapter_2/question_19/: Readme.md
docs/chapter_2/question_2/: Readme.md
docs/chapter_2/question_20/: Readme.md
docs/chapter_2/question_21/: Readme.md
docs/chapter_2/question_24/: Readme.md
docs/chapter_2/question_5/: Readme.md
docs/chapter_2/question_7/: Readme.md
docs/chapter_3/: Readme.md
docs/chapter_3/question_02/: Readme.md
docs/chapter_3/question_04/: Readme.md  main.c
docs/chapter_3/question_06/: Readme.md
docs/chapter_3/question_09/: Readme.md  question_9.c
docs/chapter_3/question_11/: Readme.md  question_11_butterfly.c  question_11_mpi  question_11_mpi.c
docs/chapter_3/question_12/: Readme.md  bench.c
docs/chapter_3/question_13/: Readme.md  question_13.c
question_1/: Readme.md
question_2/: questao_2.py  question_2.md  question_2.py
question_3/: Readme.md  debug.hpp  node.hpp  question_3.cpp  question_3.md
question_4/: Readme.md  question_4.cpp
question_5/: question_5.cpp
swaptions/: CMakeLists.txt  Readme.md  run_super_pc.sh  run_tests.sh  time.data
swaptions/pascal-releases/: .gitattributes  README.md  env.sh  install.sh
swaptions/pascal-releases/include/: pascalops.h
swaptions/src/: CumNormalInv.cpp  HJM.cpp  HJM.h  HJM_SimPath_Forward_Blocking.cpp  HJM_Swaption_Blocking.cpp  HJM_type.h  icdf.cpp  main.cpp  main_test.cpp  nr_routines.cpp  nr_routines.h
swaptions/src/HJM/: HJM.cpp  HJM.h  HJM_type.h
swaptions/src/HJM_Securities/: HJM_Securities.cpp  HJM_Securities.h  HJM_SimPath_Forward_Blocking.cpp  HJM_Swaption_Blocking.cpp
swaptions/src/HJM_Securities/find_z_values/: find_z_values.h  openmp_find_z_values.cpp  ptheads_find_z_values.cpp  serial_find_z.cpp  tbb_find_z.cpp
swaptions/src/block_range/: block_range.h
swaptions/src/command_line_app/: command_line_app.cpp  command_line_app.h  command_line_app.hpp
swaptions/src/dataset/: dataset.cpp  dataset.h  dataset.hpp
swaptions/src/find_z_values/: find_z_values.h  openmp_find_z_values.cpp  ptheads_find_z_values.cpp  serial_find_z.cpp  tbb_find_z.cpp
swaptions/src/managers/: manager.h  openmp_manager.hpp  pthread_manager.hpp  range.h
swaptions/src/nr_routines/: nr_routines.cpp  nr_routines.h
swaptions/src/runners/: openmp_runner.cpp  pthread_runner.cpp  runner.h  tbb_runner.cpp
swaptions/src/runners/block_range/: block_range.cpp
swaptions/src/swaptions_simulation/: swaptions_simulation.cpp  swaptions_simulation.h
swaptions/src/tests/: tests.hpp
swaptions/tests/: simdev.txt  simlarge.txt  simmedium.txt  simtest.txt  test.txt
(+5 files in other folders)
